<resources>
    <string name="app_name" translatable="false">Module 201 - Project 5</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="month_of_birth">Month of birth</string>
    <string name="your_age_in">Your age in</string>
    <string name="zero_number">0</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="days">Days</string>
    <string name="enter_year_of_birth">Enter Year of Birth</string>
    <string name="invalid_year_of_birth">Invalid Year of Birth</string>
    <string name="enter_month_of_birth">Enter Month of Birth</string>
    <string name="invalid_month_of_birth">Invalid Month of Birth</string>
    <string name="invalid_to_calculate">Your age is invalid to calculate</string>
    <string name="year_sign">%s Year of Birth</string>
    <string name="month_sign">%s Month of Birth</string>
    <string name="new_user">New User</string>
</resources>