<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.2"
        android:text="@string/age_calculator"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextYear"
        style="@style/EditTextBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="50dp"
        android:digits="1234567890"
        android:hint="@string/year_of_birth"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/editTextMonth"
        style="@style/EditTextBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="38dp"
        android:digits="1234567890"
        android:enabled="false"
        android:hint="@string/month_of_birth"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:maxLength="2" />

    <TextView
        android:id="@+id/textViewAgeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.2"
        android:text="@string/your_age_in"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfYear"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/years" />

            <TextView
                android:id="@+id/numberOfWeeks"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:maxLength="5"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weeks" />

            <TextView
                android:id="@+id/numberOfHours"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@string/hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfMonths"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/months" />

            <TextView
                android:id="@+id/numberOfDays"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:maxLength="6"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days" />

            <TextView
                android:id="@+id/numberOfMinutes"
                style="@style/TextViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:maxLength="10"
                android:text="@string/zero_number" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNew"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_user" />
</LinearLayout>
